<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HearthstoneFragment"
    android:background="@color/colorBackground">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/slika"
        android:layout_width="match_parent"
        android:layout_height="450px"
        android:layout_alignParentTop="true"
        android:contentDescription="Hearthstone"
        android:src="@drawable/hearthstone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/desc"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/slika"
        android:text="@string/HearthstoneDesc"
        android:textColor="@color/colorAccent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/platforms"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/HearthstonePlatforms"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratings"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/HearthstoneRatings"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/buttonConfigsHearthstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="Configurations" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDetailsHearthstone"
        android:layout_marginTop="550dp"
        android:layout_toRightOf="@id/buttonConfigsHearthstone"
        android:text="Details" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonWebHearthstone"
        android:layout_toRightOf="@id/buttonDetailsHearthstone"
        android:layout_marginTop="550dp"
        android:text="Web page" />

</RelativeLayout>